# vega_project

./: .gitignore  CMakeLists.txt  README.md
config/: sample.json
data/: sample.csv
include/: csv_reader.hpp  indicator.hpp
include/backtest/: backtester.hpp
include/config/: run_config.hpp
include/core/: types.hpp
include/indicators/: regime.hpp  vwap_band.hpp
include/strategy/: composite_strategy.hpp
src/: backtester.cpp  composite_strategy.cpp  core_types.cpp  csv_reader.cpp  indicator.cpp  main.cpp  regime.cpp  run_config.cpp  vwap_band.cpp
tests/: test_indicator.cpp  test_strategy.cpp
